--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://kosugi-1979.github.io
+title: untitled
+subtitle:
+author: kosugi
 simple_search: https://www.google.com/search
 description:
 
@@ -91,7 +91,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: untitled-kosugi
 disqus_show_comment_count: false
 
 # Google Analytics
